--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ node_modules/
 dist/
 web-build/
 expo-env.d.ts
+ios/
+android/
 
 # Native
 .kotlin/
@@ -37,3 +39,5 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+.vscode/
