--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-webview": "13.13.5",
     "expo-dev-client": "~5.2.4",
     "expo-keep-awake": "~14.1.4",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
